--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.5.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "supertest": "^6.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
